<resources>
    <string name="app_name">Shops</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="email">Adres E-Mail</string>
    <string name="password">Hasło</string>
    <string name="do_register">Zarejestruj</string>
    <string name="select_photo">Wybierz zdjęcie</string>
    <string name="login_screen_link">Już posiadasz konto?</string>
    <string name="has_no_account">Nie posiadam konta</string>
    <string name="do_login">Zaloguj</string>
    <string name="sign_out">Wyloguj</string>
    <string name="add_shop">Dodaj sklep</string>
    <string name="shop_name">Nazwa sklepu</string>
    <string name="shop_type">Typ sklepu</string>
    <string name="save">Zapisz</string>
    <string name="action_undo">Cofnij</string>
    <string name="shop_removed">Sklep %s został usunięty</string>
    <string name="map">Mapa</string>
    <string name="notification_name">Notyfikacje z aplikacji Shops</string>
    <string name="action_photo">Zdjęcie</string>
    <string name="action_gallery">Galeria</string>
    <string name="action_cancel">Anuluj</string>

    <string name="notification_title_entered">Wejście w obszar</string>
    <string name="notification_content_entered">Znajdujesz się w obszarze sklepu.</string>
    <string name="notification_title_exited">Wyjście z obszaru</string>
    <string name="notification_content_exited">Wyszedłeś z obszaru sklepu</string>
</resources>
