<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegistrationActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUsername" android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:hint="@string/username" app:layout_constraintTop_toBottomOf="@+id/btnSelectPhoto"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintStart_toStartOf="@+id/etUsername" app:layout_constraintEnd_toEndOf="@+id/etUsername"
            android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="@+id/etEmail" app:layout_constraintStart_toStartOf="@+id/etEmail"
            android:hint="@string/password"/>
    <Button
            android:text="@string/do_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/btnRegister" app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>
    <Button
            android:text="@string/select_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/circle_button"
            android:id="@+id/btnSelectPhoto" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/login_screen_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/tvLoginScreenLink" app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" android:layout_marginTop="32dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSelectPhoto"
            app:layout_constraintEnd_toEndOf="@+id/btnSelectPhoto"
            app:layout_constraintTop_toTopOf="@+id/btnSelectPhoto"
            app:layout_constraintStart_toStartOf="@+id/btnSelectPhoto" android:id="@+id/ivSelectedPhoto"/>
</android.support.constraint.ConstraintLayout>