<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:id="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:id="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etEmail" app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" android:layout_marginTop="16dp"
            android:hint="@string/password"/>
    <Button
            android:text="@string/do_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/etPassword" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/etPassword"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"/>
    <TextView
            android:text="@string/has_no_account"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHasNoAccount"
            app:layout_constraintStart_toStartOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" android:layout_marginTop="32dp"/>
</android.support.constraint.ConstraintLayout>